src/networking/demo/cnp/cnp-20-allow-visitor-to-phippy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-20-allow-visitors-to-phippy-api"
spec:
  endpointSelector:
    matchLabels:
      app: phippy-api
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/user/objects"
        - method: GET
          path: "/admin/objects"
