src/networking/demo/cnp/cnp-30-allow-admin-to-phippy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-30-allow-admin-to-phippy-api"
spec:
  endpointSelector:
    matchLabels:
      app: phippy-api
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: phippy-admin
    c
